Fixed spacing

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
   display: flex;
   flex-flow: column;
   align-items: center;
+  gap: 2rem;
 }
 
 .countries {
